Added a parameter for RRADef : precision

--- a/src/collectd.conf.pod
+++ b/src/collectd.conf.pod
@@ -5303,46 +5303,59 @@ one (exclusive).
 =item B<RRA> I<rra types or rra types list>
 
 Specify the RRA to create. If absent, AVERAGE, MIN and MAX will be created.
-You can either give a sublist of RRA to create (eg "AVERAGE,MIN") or multiple
+You can either give a sublist of RRA to create (eg "AVERAGE MIN") or multiple
 lines with RRA sublists. Examples :
 
-RRA "AVERAGE,MIN,MAX"
+RRA AVERAGE MIN MAX
 
-RRA "AVERAGE,MIN"
+RRA AVERAGE MIN 
 
-RRA "AVERAGE"
-RRA "MIN
+RRA AVERAGE
+RRA MIN
 
 The first is the default
 The last two are equivalent.
 
-=item B<RRADef> I<timespan> I<pdp per row> I<rra types list> I<XFF>
+=item B<RRADef> I<timespan> I<pdp per row> I<precision> I<rra types list> I<XFF>
 
 Fully specify the RRA to create. This will define a set of 1 to 3 RRA (according
 to the types list you specify) with the given timespan, pdp per row and XFF.
 
 This will overwrite the definition of RRATimespan if given.
 
-Timespan : same as RRATimespan
+I<timespan> : same as RRATimespan
 
-pdp per row : defines the precision of a RRA (multiply with the interval to know it).
+I<pdp per row> : defines the precision of a RRA (multiply with the interval to know it).
+0 means default.
 
-rra types list : same as RRA
+I<precision> : If I<pdp per row> is 0 and I<precision> is not 0, I<pdp per row> 
+will be computed : I<pdp per row> = max(I<precision> / Interval , 1) where the Interval is
+either forced with B<StepSize> or the interval of the metric.
 
-XFF : same as XFF
+I<rra types list> : same as RRA. "default" means default (either from B<RRA> or the built-in
+default MIN MAX AVERAGE)
 
-Except for timespan, you can write "default" and the default value will be used.
+I<XFF> : same as XFF. Not in range value means default (either from B<XFF> or
+the built-in default 0.1).
 
 When receiving metrics with interval=60, configuration is computed as it was :
-RRADef     3600   1 MIN,MAX,AVERAGE 0.1
-RRADef    86400   1 MIN,MAX,AVERAGE 0.1
-RRADef   604800   8 MIN,MAX,AVERAGE 0.1
-RRADef  2678400  37 MIN,MAX,AVERAGE 0.1
-RRADef 31622400 439 MIN,MAX,AVERAGE 0.1
+RRADef     3600   1 0 MIN MAX AVERAGE 0.1
+RRADef    86400   1 0 MIN MAX AVERAGE 0.1
+RRADef   604800   8 0 MIN MAX AVERAGE 0.1
+RRADef  2678400  37 0 MIN MAX AVERAGE 0.1
+RRADef 31622400 439 0 MIN MAX AVERAGE 0.1
 
 Note : when interval is different, the pdp per row may change if you do not use RRADef.
 This is why you may want to use RRADef instead of only RRATimespan.
 
+Another example : 1 set of RRA with min, max and average for 1 day with the best precision,
+then 1 RRA with only average for 1 year with a precision as 1 minute if possible. XFF is
+not specified so we get the default value.
+
+RRADef    86400 1  0 MIN MAX AVERAGE
+RRADef 31622400 0 60 AVERAGE
+
+ 
 =back
 
 =head2 Plugin C<rrdtool>
